--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <video controls>
   <source src="video/video.mp4" type="video/mpr">
   <source src="video/video.mp4" type="video/ogg">
-  Your browser does not support HTML5 video <a href="http://browsehappy.com"</a>
+  Your browser does not support HTML5 video <a href="http://browsehappy.com" target="_blank">Please upgrade your browser</a>
   
 </video>
   </body>
