--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </nav>
 </header>
     
-    <section>
+    <section id="featured-property">
         <img src="images/intro-pic.jpg" alt="A beautiful living room." title="Welcome to Exceptional Realty Group">
     
         <!--
@@ -37,10 +37,12 @@
 
 <!--- promo video --->
 
-<video controls>
-  <source src="video/video.mp4" type="video/mpr">
-  <source src="video/video.mp4" type="video/ogg">
-  Your browser does not support HTML5 video <a href="http://browsehappy.com" target="_blank">Please upgrade your browser</a>
+    <section id="promotional">
+    <video controls>
+      <source src="video/video.mp4" type="video/mpr">
+      <source src="video/video.mp4" type="video/ogg">
+      Your browser does not support HTML5 video <a href="http://browsehappy.com" target="_blank">Please upgrade your browser</a>
+      </section>
   
 </video>
   </body>
