--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
 </header>
     
     <section id="featured-property">
-        <img src="images/intro-pic.jpg" alt="A beautiful living room." title="Welcome to Exceptional Realty Group">
-    
+        <figure>
+          <img src="images/intro-pic.jpg" alt="A beautiful living room." title="Welcome to Exceptional Realty Group">
+      </figure>
         <!--
         foldername/ = go inside the folder.
         filename = use a file in the current folder.
@@ -42,8 +43,12 @@
       <source src="video/video.mp4" type="video/mpr">
       <source src="video/video.mp4" type="video/ogg">
       Your browser does not support HTML5 video <a href="http://browsehappy.com" target="_blank">Please upgrade your browser</a>
+      </video>
       </section>
   
-</video>
+<footer>
+  &copy; 2-14 Exceptional Realty. All Rights Reserved
+  
+</footer>
   </body>
 </html>
