--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <section id="featured-property">
         <figure>
           <img src="images/intro-pic.jpg" alt="A beautiful living room." title="Welcome to Exceptional Realty Group">
+          <figcaption>345 Carl Street Apt 12, Carrol Rd Brooklyn, NY - Photo by Denise Richards</figcaption>
       </figure>
         <!--
         foldername/ = go inside the folder.
@@ -39,11 +40,14 @@
 <!--- promo video --->
 
     <section id="promotional">
+      <figure>
     <video controls>
       <source src="video/video.mp4" type="video/mpr">
       <source src="video/video.mp4" type="video/ogg">
       Your browser does not support HTML5 video <a href="http://browsehappy.com" target="_blank">Please upgrade your browser</a>
       </video>
+      <figcaption>Exceptional Realty Group Promotional Video - Source archive.org</figcaption>
+      </figure>
       </section>
   
 <footer>
